Modified HTML and CSS adding profile image.

--- a/site/index.html
+++ b/site/index.html
@@ -11,6 +11,7 @@
   <body>
 
     <div class="main-nav">
+        <img src="images/me.jpg" alt="Cameron Bond" class="profile-image">
         <ul class="nav">
           <li class="name">Cameron Bond</li>
           <li><a href="index.html">Home</a></li>
